--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,7 +13,10 @@ body {
 main {
   flex: 1;
 }
-
+.btn-primary {
+  background-color: #ffc000;
+  color : black
+}
 .products {
   display: flex;
   flex-wrap: wrap;
@@ -29,4 +32,7 @@ main {
 }
 .product-info {
   padding: 1rem;
+}
+.rating span {
+  color: #ffc000;
 }
